--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,7 +5,7 @@ _extends: .github
 repository:
   name: platform
   description: Turn data into revenue
-  homepage: https://mytiki.com/
+  homepage: https://mytiki.com
   topics: mytiki, platform
   private: false
   has_projects: false
