--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,7 +4,7 @@ _extends: .github
 
 repository:
   name: platform
-  description: Open-source data monetization platform. Build your data business, not infrastructure.
+  description: A platform for monetizing data. Build a data business, not infrastructure.
   homepage: https://mytiki.com
   topics: mytiki, platform
   private: false
